--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Gofer Motors</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   
   <body>
